--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -13,7 +13,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="150dp"
         android:layout_marginEnd="16dp"
-        android:text="Calculation"
         android:gravity="bottom|end"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,9 +38,9 @@
         android:id="@+id/buttonNR2"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:background = "@drawable/round_button"
+        android:background = "@drawable/round_button_number"
         android:text="@string/buttonNR2_text"
-        app:backgroundTint="#8c8c8c"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toTopOf="@+id/buttonNR5"
         app:layout_constraintEnd_toStartOf="@+id/buttonNR3"
         app:layout_constraintHorizontal_bias="0.5"
@@ -52,9 +51,9 @@
         android:id="@+id/buttonPlus"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:background = "@drawable/round_button"
+        android:background = "@drawable/round_button_operation"
         android:text="@string/buttonPlus_text"
-        app:backgroundTint="#5a768a"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toTopOf="@+id/buttonMinus"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -66,8 +65,8 @@
         android:text="@string/buttonNR1_text"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:background = "@drawable/round_button"
-        app:backgroundTint="#8c8c8c"
+        android:background = "@drawable/round_button_number"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toTopOf="@+id/buttonNR4"
         app:layout_constraintEnd_toStartOf="@+id/buttonNR2"
         app:layout_constraintHorizontal_bias="0.5"
@@ -78,9 +77,9 @@
         android:id="@+id/buttonNR4"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:background = "@drawable/round_button"
+        android:background = "@drawable/round_button_number"
         android:text="@string/buttonNR4_text"
-        app:backgroundTint="#8c8c8c"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toTopOf="@+id/buttonNR7"
         app:layout_constraintEnd_toStartOf="@+id/buttonNR5"
         app:layout_constraintHorizontal_bias="0.5"
@@ -91,9 +90,9 @@
         android:id="@+id/buttonNR7"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:background = "@drawable/round_button"
+        android:background = "@drawable/round_button_number"
         android:text="@string/buttonNR7_text"
-        app:backgroundTint="#8c8c8c"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toTopOf="@+id/buttonMult"
         app:layout_constraintEnd_toStartOf="@+id/buttonNR8"
         app:layout_constraintHorizontal_bias="0.5"
@@ -104,9 +103,9 @@
         android:id="@+id/buttonNR5"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:background = "@drawable/round_button"
+        android:background = "@drawable/round_button_number"
         android:text="@string/buttonNR5_text"
-        app:backgroundTint="#8c8c8c"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toTopOf="@+id/buttonNR8"
         app:layout_constraintEnd_toStartOf="@+id/buttonNR6"
         app:layout_constraintHorizontal_bias="0.5"
@@ -117,9 +116,9 @@
         android:id="@+id/buttonNR6"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:background = "@drawable/round_button"
+        android:background = "@drawable/round_button_number"
         android:text="@string/buttonNR6_text"
-        app:backgroundTint="#8c8c8c"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toTopOf="@+id/buttonNR9"
         app:layout_constraintEnd_toStartOf="@+id/buttonMinus"
         app:layout_constraintHorizontal_bias="0.5"
@@ -130,9 +129,9 @@
         android:id="@+id/buttonMinus"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:background = "@drawable/round_button"
+        android:background = "@drawable/round_button_operation"
         android:text="@string/buttonMinus_text"
-        app:backgroundTint="#5a768a"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toTopOf="@+id/buttonEquals"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -143,9 +142,9 @@
         android:id="@+id/buttonNR8"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:background = "@drawable/round_button"
+        android:background = "@drawable/round_button_number"
         android:text="@string/buttonNR8_text"
-        app:backgroundTint="#8c8c8c"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toTopOf="@+id/buttonNR0"
         app:layout_constraintEnd_toStartOf="@+id/buttonNR9"
         app:layout_constraintHorizontal_bias="0.5"
@@ -156,9 +155,9 @@
         android:id="@+id/buttonNR9"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:background = "@drawable/round_button"
+        android:background = "@drawable/round_button_number"
         android:text="@string/buttonNR9_text"
-        app:backgroundTint="#8c8c8c"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toTopOf="@+id/buttonDiv"
         app:layout_constraintEnd_toStartOf="@+id/buttonDelete"
         app:layout_constraintHorizontal_bias="0.5"
@@ -169,9 +168,9 @@
         android:id="@+id/buttonDelete"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:background="@drawable/round_button"
+        android:background="@drawable/round_button_delete"
         android:text="C"
-        app:backgroundTint="#558bbd"
+        app:backgroundTint="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/buttonNR3"
         app:layout_constraintBottom_toTopOf="@+id/buttonPlus"
@@ -181,9 +180,9 @@
         android:id="@+id/buttonNR3"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:background = "@drawable/round_button"
+        android:background = "@drawable/round_button_number"
         android:text="@string/buttonNR3_text"
-        app:backgroundTint="#8c8c8c"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toTopOf="@+id/buttonNR6"
         app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
         app:layout_constraintHorizontal_bias="0.5"
@@ -194,9 +193,9 @@
         android:id="@+id/buttonMult"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:background = "@drawable/round_button"
+        android:background = "@drawable/round_button_operation"
         android:text="@string/buttonMult_text"
-        app:backgroundTint="#5a768a"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonNR0"
         app:layout_constraintHorizontal_bias="0.5"
@@ -207,9 +206,9 @@
         android:id="@+id/buttonNR0"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:background = "@drawable/round_button"
+        android:background = "@drawable/round_button_number"
         android:text="@string/buttonNR0_text"
-        app:backgroundTint="#8c8c8c"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonDiv"
         app:layout_constraintHorizontal_bias="0.5"
@@ -220,9 +219,9 @@
         android:id="@+id/buttonDiv"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:background = "@drawable/round_button"
+        android:background = "@drawable/round_button_operation"
         android:text="@string/buttonDiv_text"
-        app:backgroundTint="#5a768a"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonEquals"
         app:layout_constraintHorizontal_bias="0.5"
@@ -233,9 +232,9 @@
         android:id="@+id/buttonEquals"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:background = "@drawable/round_button"
+        android:background = "@drawable/round_button_equals"
         android:text="@string/buttonEquals_text"
-        app:backgroundTint="#fa870c"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
