--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -2,10 +2,8 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.KalkFrei" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <item name="colorPrimary">@color/white</item>
-        <item name="colorPrimaryDark">@color/black</item>
-        <item name="android:statusBarColor">@color/white</item>
-        <item name="android:navigationBarColor">@color/white</item>
+        <item name="android:statusBarColor">#FFFBFE</item>
+        <item name="android:navigationBarColor">#FFFBFE</item>
         <item name="android:windowLightStatusBar">true</item>
     </style>
 
