--- a/src/main/res/values-night/themes.xml
+++ b/src/main/res/values-night/themes.xml
@@ -5,5 +5,6 @@
         <item name="android:statusBarColor">#1C1B1F</item>
         <item name="android:navigationBarColor">#1C1B1F</item>
         <item name="android:windowLightStatusBar">false</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">false</item>
     </style>
 </resources>
