--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -5,6 +5,7 @@
         <item name="android:statusBarColor">#FFFBFE</item>
         <item name="android:navigationBarColor">#FFFBFE</item>
         <item name="android:windowLightStatusBar">true</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
     </style>
 
     <style name="Theme.KalkFrei" parent="Base.Theme.KalkFrei" />
